--- a/static/css/admin/groups.css
+++ b/static/css/admin/groups.css
@@ -8,3 +8,28 @@ h3 {
     height: 20px;
     padding: 0;
 }
+
+.addGroup{
+    display: block;
+}
+
+.addGroup .form-group{
+    margin-top: 1rem;
+}
+.addGroup .form-group label{
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.addGroup button{
+    display: block;
+    margin-top: 1.5rem;
+}
+@media screen and (min-width: 1600px){
+    .groupsContainer h3{
+        margin-bottom: 1rem;
+        text-align: center;
+    }
+    .groupsTable button{
+        width: 60px !important;
+    }
+}
