--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -5,7 +5,7 @@
     <div>
         <h3>Ranking grupowy</h3>
         {% if students|length  > 0 %}
-            <table class="table table-striped table-responsive-sm table-sm">
+            <table class="table table-dark table-striped table-responsive-sm table-sm">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
@@ -56,7 +56,7 @@
     <div class="row">
         <div class="col">
             <h3>Grupa_10-45</h3>
-            <table class="table table-striped table-responsive-sm table-sm">
+            <table class="table table-dark table-striped table-responsive-sm table-sm">
                 <thead>
                         <tr>
                             <th scope="col">Lekcja</th>
