--- a/templates/admin/students.html
+++ b/templates/admin/students.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container ">
     {% if students.count > 0 %}
-        <table class="table table-striped table-dark">
+        <table class="table table-striped table-dark mt-3">
             <thead>
                 <tr>
                     <th scope="col">Lp</th>
@@ -23,8 +23,8 @@
                         <td>{{student.first_name}}</td>
                         <td>{{student.last_name}}</td>
                         <td>{{student.email}}</td>
-                        <td><a href="{% url 'adminSite:editStudent' student.id %}" class="badge badge-primary">Detale</a></td>
-                        <td><a href="{% url 'adminSite:deleteStudent' student.id %}" class="badge badge-danger">Usuń</a></td>
+                        <td><a href="{% url 'adminSite:editStudent' student.id %}" class="badge badge-primary studentListButton">Detale</a></td>
+                        <td><a href="{% url 'adminSite:deleteStudent' student.id %}" class="badge badge-danger studentListButton">Usuń</a></td>
                     </tr>
                 {% endfor %}
             </tbody>
