--- a/templates/admin/responses.html
+++ b/templates/admin/responses.html
@@ -18,21 +18,21 @@
                 <td>Artur Czopek
                 <td>Grupa_10-45
                 <td>20.09.2018 12:30
-                <td><a href="responseDetails"><button class="btn btn-danger">Oceń</button></a>
+                <td><a href="responseDetails/1"><button class="btn btn-danger">Oceń</button></a>
             </tr>
             <tr>
                 <td>2
                 <td>Mateusz Bogackissssssss
                 <td>Grupa_10-45
                 <td>20.09.2018 12:30
-                <td><a href="responseDetails"><button class="btn btn-danger">Oceń</button></a>
+                <td><a href="responseDetails/2"><button class="btn btn-danger">Oceń</button></a>
             </tr>
             <tr>
                 <td>3
                 <td>Pjoter Błaszczak
                 <td>Grupa_10-45
                 <td>20.09.2018 12:30
-                <td><a href="responseDetails"><button class="btn btn-danger">Oceń</button></a>
+                <td><a href="responseDetails/3"><button class="btn btn-danger">Oceń</button></a>
             </tr>
         </tbody>
     </table>
