--- a/static/css/admin/base.css
+++ b/static/css/admin/base.css
@@ -101,6 +101,29 @@ body {
     
 }
 
+.myCard {
+    margin-bottom: 10px;
+    color: #000;
+}
 
+.myCard .title{
+    background-color: rgba(255, 130, 46, 0.8);
+    margin-top: 0px;
+    border-bottom: 3px solid #000;
+    text-align: center;
+    color: #00054F;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+.panelTitle{
+    font-weight: bold;
+    border-bottom: 1px dashed #000;
+}
+.myCardBody:hover{
+    background-color: #E2FFEC;
+}
 
-
+.medalMini{
+    max-width: 40px;
+    max-height: auto;
+}
