--- a/templates/admin/studentDetails.html
+++ b/templates/admin/studentDetails.html
@@ -33,10 +33,10 @@
                 <tr>
                     <td>Aktualna grupa</td>
                     {% if student.group != None %}
-                        
-                        <td>{{student.group.name}}</td>
+
+                    <td>{{student.group.name}}</td>
                     {% else %}
-                        <td>Brak grupy</td>
+                    <td>Brak grupy</td>
                     {% endif %}
                 </tr>
                 <tr>
@@ -61,7 +61,100 @@
                 </tr>
             </tbody>
         </table>
+
+        <!-- STAGE DETAILS -->
+
+        {% for stage in stages %}
+        <div class="card myCard">
+            <div class="card-header title">
+                {{stage.name}}
+                
+            </div>
+            <div class="card-body">
+                <div class="row myCardBody panelTitle">
+                    <div class="col-sm">
+                        Id odpowiedzi
+                    </div>
+                    <div class="col-sm">
+                            Nazwa zadania
+                        </div>
+                    <div class="col-sm">
+                        Czy ukończony
+                    </div>
+                    <div class="col-sm">
+                        Czy oceniony
+                    </div>
+                </div>
+                {%for answer in stage.tasks %}
+                <div class="row myCardBody">
+                    <div class="col-sm">
+                        {{answer.answer_id}}
+                    </div>
+                    <div class="col-sm">
+                        {{answer.title}}
+                    </div>
+                    <div class="col-sm">
+                        {% if answer.completed == 0 %}
+                            W trakcie
+                        {% else %}
+                            Ukończony
+                        {% endif %}
+                    </div>
+                    <div class="col-sm">
+                        {% if answer.completed == 1 and answer.rated == 1%}
+                            <a href="{% url 'adminSite:responseDetails' answer.answer_id %}" class="badge badge-success">Oceniony</a>
+                        {% elif answer.completed == 1 and answer.rated == 0 %}
+                            <a href="{% url 'adminSite:responseDetails' answer.answer_id %}" class="badge badge-warning">Do oceny</a>
+                        {% else %}
+                            <p class="badge badge-secondary">Nie można ocenić</p>
+                        {% endif %}
+                    </div>
+                </div>
+                {% endfor%}
+            </div>
+        </div>
+        {% endfor%}
+        <table class="table table-dark table-hover">
+            <thead>
+                <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+
+            </tbody>
+        </table>
     </div>
 
 </div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 {% endblock %}
