fix student respone list

--- a/templates/admin/responses.html
+++ b/templates/admin/responses.html
@@ -13,27 +13,15 @@
             </tr>
         </thead>
         <tbody>
+            {% for answer in answers%}
             <tr class="col-1">
-                <td>1
-                <td>Artur Czopek
-                <td>Grupa_10-45
-                <td>20.09.2018 12:30
-                <td><a href="responseDetails/1"><button class="btn btn-danger">Oceń</button></a>
+                <td>{{answer.id}} </td>
+                <td><a href="{% url 'adminSite:editStudent' answer.student_id %}">{{answer.student}}</a> </td>
+                <td><a href="{% url 'adminSite:groupDetails' answer.group_id %}">{{answer.group_name}}</a> </td>
+                <td>{{answer.date}} </td>
+                <td><a href="{% url 'adminSite:responseDetails' answer.id %}"><button class="btn btn-danger">Oceń</button></a> </td>
             </tr>
-            <tr>
-                <td>2
-                <td>Mateusz Bogackissssssss
-                <td>Grupa_10-45
-                <td>20.09.2018 12:30
-                <td><a href="responseDetails/2"><button class="btn btn-danger">Oceń</button></a>
-            </tr>
-            <tr>
-                <td>3
-                <td>Pjoter Błaszczak
-                <td>Grupa_10-45
-                <td>20.09.2018 12:30
-                <td><a href="responseDetails/3"><button class="btn btn-danger">Oceń</button></a>
-            </tr>
+            {% endfor%}
         </tbody>
     </table>
 </div>
