--- a/static/css/admin/base.css
+++ b/static/css/admin/base.css
@@ -98,12 +98,27 @@ body {
 }
 .custom-file-input{
     opacity: 1 !important;
-    
 }
+
+/* STUDENT */
+.studentsContainer{
+    margin-top: 1%;
+    padding-bottom: 10px;
+    background-color: rgb(179, 177, 177);
+    border-radius: 25px;
+}
+.studentDetails .backButton{
+    float: right;
+}
+.studentDetails .backButton button{
+    width: 100px !important;
+}
+    
 .myCard {
     margin-bottom: 10px;
     color: #000;
 }
+
 .myCard .title{
     background-color: rgba(255, 130, 46, 0.8);
     margin-top: 0px;
@@ -131,7 +146,7 @@ body {
         font-size: 1rem;
         width: 80%;
         height: 30%;
-    
+    }
 }
 @media screen and (min-width: 1600px){
     .container{
@@ -139,5 +154,5 @@ body {
     }
     .label{
         font-size: 2rem;
-    }   
+    }
 }
