--- a/templates/admin/excercises.html
+++ b/templates/admin/excercises.html
@@ -18,8 +18,8 @@
         {% if tasks != None %}
             
             <div class="row excercisesList">
-                <div class="col-6">
-                    <table class="table table-hover bg-light table-sm">
+                <div class="col-9">
+                    <table class="table table-hover table-dark table-stripped table-sm">
                         <thead>
                             <tr>
                                 <th>Id</th>
@@ -40,7 +40,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="col-6">
+                <div class="col-3">
                     <a class="addButton" href="{% url 'adminSite:newExcercise' stage_id=stageId %}"><button class="btn btn-primary"> Dodaj nowe zadanie </button></a>
                 </div>
             </div>
