--- a/templates/admin/students.html
+++ b/templates/admin/students.html
@@ -1,8 +1,9 @@
 {% extends "admin/base.html" %}
 
 {% block content %}
-<div class="container ">
+<div class="container studentsContainer">
     {% if students.count > 0 %}
+    <h1 class="py-2" align="center">Lista studentów</h1>
         <table class="table table-striped table-dark mt-3">
             <thead>
                 <tr>
