Add student view

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/admin/excercises.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/groupDetails.css' %}" />
     <link rel="stylesheet" href="{% static 'css/admin/messages.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/admin/students.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
