--- a/templates/admin/students.html
+++ b/templates/admin/students.html
@@ -3,7 +3,10 @@
 {% block content %}
 <div class="container studentsContainer">
     {% if students.count > 0 %}
-    <h1 class="py-2" align="center">Lista studentów</h1>
+        <div>
+            <h1 class="py-2" align="center">Lista studentów</h1>
+            <a href="{% url 'adminSite:addStudent' %}" class="addStudentButton"><button class="btn btn-primary"><i class="fa fa-plus pr-2"></i>Dodaj studenta</button></a>
+        </div>
         <table class="table table-striped table-dark mt-3">
             <thead>
                 <tr>
