--- a/templates/admin/messages.html
+++ b/templates/admin/messages.html
@@ -4,42 +4,38 @@
 <div class="container messagesBody">
     <h1>Wiadomości</h1>
     <form>
+        {% if messages %}
         <table class="table table-striped table-dark table-sm table-responsive-sm">
             <thead align="center">
                 <tr>
-                    <th scope="col"><input id="all" class="checkjq" type="checkbox" /></th>
+                    <th scope="col"><input id="all" class="checkjq" type="checkbox" />Lp</th>
                     <th scope="col">Data</th>
                     <th scope="col">Od</th>
-                    <th scope="col">Treść</th>
+                    <th scope="col">Tytuł</th>
+                    <th scope="col">Przeczytana</th>
                 </tr>
             </thead>
             <tbody>
+                {% for message in messages %}
                 <tr>
-                    <th scope="row"><input type="checkbox" /></th>
-                    <td>21.09.2018</td>
-                    <td>Marek DDD</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </td>
+                    <td scope="row">{{forloop.counter}}. <input type="checkbox" /></td>
+                    <td>{{message.date}}</td>
+                    <td><a  href="{% url 'adminSite:editStudent' message.from_user_id %}">{{message.from_user_name}}</a></td>
+                    <td>{{message.title}}</td>
+                    {% if message.is_read == 0 %}
+                    <td><p class="badge badge-danger">Nieprzeczytana</p></td>
+                    {% else %}
+                    <td><p class="badge badge-success">Przeczytana</p></td>
+                    {%endif%}
                 </tr>
-                <tr>
-                    <th scope="row"><input type="checkbox" /></th>
-                    <td>21.09.2018</td>
-                    <td>Jacob DDDD</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </td>
-                </tr>
-                <tr>
-                    <th scope="row"><input type="checkbox" /></th>
-                    <td>21.09.2018</td>
-                    <td>Artur DDDDD</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sLorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation Bird</td>
-                </tr>
+                {% endfor %}
             </tbody>
         </table>
-        <input type="submit" class="btn btn-danger float-right" value="Usuń zaznaczone" disabled/>
+        {% else %}
+        <p>Brak wiadomości</p>
+        {% endif %}
+
+        <input type="submit" class="btn btn-danger float-right" value="Usuń zaznaczone" disabled />
     </form>
 </div>
 
@@ -49,10 +45,10 @@
     });
 
     var checkboxes = $(":checkbox"),
-    submitButt = $("input[type='submit']");
+        submitButt = $("input[type='submit']");
 
-    checkboxes.click(function() {
-    submitButt.attr("disabled", !checkboxes.is(":checked"));
+    checkboxes.click(function () {
+        submitButt.attr("disabled", !checkboxes.is(":checked"));
     });
 </script>
 {% endblock %}
