Student send message view

--- a/templates/main/message.html
+++ b/templates/main/message.html
@@ -11,6 +11,9 @@
         
         <p class="messageTitle">Treść</p>
         <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dLorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum d</p>
+        <div align="center">
+          <a class="replyOnMessageButton" href="{% url 'main:newMessage' %}" title="Odpowiedz na tą wiadomość"><button class="btn"><i class="fa fa-paper-plane"></i>Odpowiedz</button><a>
+        </div>
     </div>
   </div>
 </section>
