--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -41,6 +41,67 @@ table {
     width:100%;
     height:100%;  
 }
+.newMessageButton{
+    text-decoration: none;
+    float: left;
+    background-color: orange;
+    position: absolute;
+    margin-left: 1rem;
+    margin-top: 1rem;
+    color: #3b3b3b;
+    border-radius: 10px;
+}
+.newMessageButton button i{
+    margin-right: 5px;
+}
+.newMessageButton button{
+    font-weight: bold;
+    background-color: orange;
+    box-shadow: 2px 2px rgb(107, 107, 107);
+}
+.newMessageButton button:hover{
+    background-color: orangered;
+    box-shadow: 2px 2px rgb(107, 107, 107);
+}
+
+
+/* NEW MESSAGE */
+.newMessageContainer{
+    margin: 0 auto;
+    width: 70%;
+    
+}
+.newMessageContainer .form-control{
+    font-size: 1.5rem;
+}
+.newMessageContainer form{
+    background-color:#eeeeeea1;
+    border-radius: 10px;
+    border: 1px solid rgb(90, 90, 90);
+    padding: 10px;
+}
+.newMessageContainer h1{
+    margin: 30px 0;
+}
+.sendMessageButton{
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: orange;
+    box-shadow: 2px 2px rgb(107, 107, 107);
+}
+.sendMessageButton:hover{
+    background-color: orangered;
+}
+.newMessageContainer .backLink{
+    font-size: 4rem;
+    color: #3b3b3b;
+    float: left;
+    position: absolute;
+    margin-top: -10px;
+}
+.newMessageContainer .backLink:hover{
+    color: rgb(119, 119, 119);
+}
 .messageTableButton a:hover{
     color: #3b3b3b;
 }
@@ -85,6 +146,22 @@ table {
 }
 .board .leftArrow:hover{
     color:#636363;
+}
+.replyOnMessageButton i{
+    margin-right: 10px;
+}
+.replyOnMessageButton button{
+    margin-top: 20px;
+    background-color: orange;
+    width: 50%;
+    color: #3b3b3b;
+    font-weight: bold;
+    border: 1px solid rgb(185, 185, 185);
+    border-radius: 5px 5px;
+    box-shadow: 2px 2px rgb(107, 107, 107);
+}
+.replyOnMessageButton button:hover{
+    background-color: orangered;
 }
 @media screen and (max-width: 992px){
     .board {
