--- a/templates/admin/messages.html
+++ b/templates/admin/messages.html
@@ -2,13 +2,16 @@
 
 {% block content %}
 <div class="container messagesBody">
-    <h1>Wiadomości</h1>
+    <div>
+        <a href="{% url 'adminSite:sendMessage' %}" class="sendMessageButton"><button class="btn btn-primary sendMessageButton"><i class="fa fa-paper-plane"></i>Wyślij wiadomość</button></a>
+        <h1>Wiadomości</h1>
+    </div>
     <form>
         {% if messages %}
         <table class="table table-striped table-dark table-sm table-responsive-sm">
             <thead align="center">
                 <tr>
-                    <th scope="col"><input id="all" class="checkjq" type="checkbox" />Lp</th>
+                    <th scope="col"><input id="all" class="checkjq" type="checkbox" />  Lp.</th>
                     <th scope="col">Data</th>
                     <th scope="col">Od</th>
                     <th scope="col">Tytuł</th>
@@ -18,15 +21,16 @@
             <tbody>
                 {% for message in messages %}
                 <tr>
-                    <td scope="row">{{forloop.counter}}. <input type="checkbox" /></td>
+                    <td scope="row"><input type="checkbox" /> {{forloop.counter}}.</td>
                     <td>{{message.date}}</td>
-                    <td><a  href="{% url 'adminSite:editStudent' message.from_user_id %}">{{message.from_user_name}}</a></td>
+                    <td class="redirectToPerson"><a href="{% url 'adminSite:editStudent' message.from_user_id %}">{{message.from_user_name}}</a></td>
                     <td>{{message.title}}</td>
                     {% if message.is_read == 0 %}
                     <td><p class="badge badge-danger">Nieprzeczytana</p></td>
                     {% else %}
                     <td><p class="badge badge-success">Przeczytana</p></td>
                     {%endif%}
+                    <td><a href="{% url 'adminSite:readMessage' %}"><button class="btn btn-info px-2 w-75" title="Otwórz wiadomość">Otwórz</button></a></td>
                 </tr>
                 {% endfor %}
             </tbody>
