--- a/templates/main/newMessage.html
+++ b/templates/main/newMessage.html
@@ -8,14 +8,23 @@
                 <a class="backLink" href="{% url 'main:messages' %}" title="Wstecz"><i class="fa fa-arrow-left"></i></a>
                 <h1 align="center">Nowa wiadomość</h1>
             </div>
-            <form>
+            <form action="{% url 'main:messages' %}" method="POST">
+                {% csrf_token %}
                 <div class="form-group">
                     <label for="messageTopic">Temat wiadomości</label>
-                    <input type="text" class="form-control" id="messageTopic" placeholder="Wpisz temat wiadomości.." autofocus required minlength="5" maxlength="40">
+                    {% if message %}
+                    <input type="hidden" name="answer_to_message" value="{{message.id}}">
+                    <input type="text" disabled value="{{message.title}}" class="form-control" name="messageTopic" id="messageTopic"
+                        required minlength="5">
+                    {% else %}
+                    <input type="text" class="form-control" id="messageTopic" name="messageTopic" placeholder="Wpisz temat wiadomości.."
+                        autofocus required minlength="5" maxlength="80">
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     <label for="messageContent">Treść wiadomości</label>
-                    <textarea class="form-control" id="messageContent" rows="5" placeholder="Tu wpisz swoją wiadomość..." required minlength="10" maxlength="500"></textarea>
+                    <textarea class="form-control" name="messageContent" id="messageContent" rows="5" placeholder="Tu wpisz swoją wiadomość..."
+                        required minlength="10" maxlength="500"></textarea>
                 </div>
                 <div align="center">
                     <button type="submit" class="btn sendMessageButton" title="Wyślij wiadomość">Wyślij</button>
