--- a/templates/admin/studentDetails.html
+++ b/templates/admin/studentDetails.html
@@ -4,8 +4,17 @@
 <div class="card text-white bg-dark mb-3 studentDetails" style="max-width: 80%;margin:10px auto;">
     <div class="card-header">
         Informacje szczegółowe
-    
-        <a class="backButton" href="{% url 'adminSite:students' %}" title="Powrót do listy studentów"><button type="button" class="btn btn-danger text-center w-25"><i class="fa fa-arrow-left mr-2"></i>Powrót</button></a>
+        <div class="topButtons">
+            <a href="{% url 'adminSite:students' %}" title="Powrót do listy studentów">
+                <button type="button" class="btn btn-danger text-center w-25">
+                    <i class="fa fa-arrow-left mr-2"></i>
+                    Powrót
+                </button>
+            </a>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#excerciseAccess">
+                Dostęp do zadań
+            </button>
+        </div>
     </div>
     <div class="card-body">
         <table class="table table-striped table-dark table-responsive-xl">
@@ -99,4 +108,56 @@
     </div>
 
 </div>
+
+<!-- MODAL -->
+<div class="modal fade" id="excerciseAccess" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Dostęp do zadań</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label>Numer lekcji</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                            <option>6</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label>Start</label>
+                        <input id="datePicker1" type="datetime-local" name="bday" max="3000-12-31" 
+                            min="2000-01-01" class="form-control dateClass">
+                        <label>Koniec</label>
+                        <input id="datePicker2" type="datetime-local" name="bday" max="3000-12-31" 
+                            min="2000-01-01" class="form-control dateClass">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Zamknij</button>
+                <button type="button" class="btn btn-primary">Zatwierdź</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    var elements = document.getElementsByClassName("dateClass");
+    var index = [];
+    for(var i=0; i<elements.length; i++) {
+        index.push(elements[i].id); 
+    }
+    for(var i=0; i<index.length; i++) {
+        document.getElementById(index[i]).value = new Date().toISOString().substring(0, 16);
+    }
+</script>
+
 {% endblock %}
